Ajout de l'explication du bouton + qui sert à lancer une invocationHeros

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -50,6 +50,7 @@
 
 			<div id="app">
 			<button style="background: var(--color-primary);border: 0; color: #fff; border-radius: 20px; width:20px;" v-on:click="invocationHeros()">+</button>
+			<p> Appuyer sur le bouton pour déclencher une invocation. Inspecter la page pour voir les console.log. </p>
 
             </div>
 
