--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -60,10 +60,10 @@
                 <p>Wrong credentials, try again!</p>
               <% }%>
               <div class="form-group">
-                <input type="text" name="login" class="form-control" id="login" placeholder="Login" required>
+                <input type="email" name="email" class="form-control" id="email" placeholder="E-mail" required>
               </div>
               <div class="form-group">
-                <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
+                <input type="password" class="form-control" name="mdp" id="mdp" placeholder="Password" required>
               </div>
             <div class="text-center"><button type="submit">Jouer</button></div>
           </form>
